--- a/BACKEND/artifact/src/main/resources/application.properties
+++ b/BACKEND/artifact/src/main/resources/application.properties
@@ -4,7 +4,10 @@ spring.application.name=artifact
 spring.datasource.url=jdbc:mysql://localhost:3306/fashion_shop_db
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.password=Phamthien123@
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+## Disable Docker Compose
+spring.docker.compose.enabled=false
