--- a/BACKEND/artifact/src/main/resources/application.properties
+++ b/BACKEND/artifact/src/main/resources/application.properties
@@ -2,12 +2,16 @@ spring.application.name=artifact
 
 ## Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/fashion_shop_db
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=root
 spring.datasource.password=Phamthien123@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+## Force Hibernate to create tables
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
 
 ## Disable Docker Compose
 spring.docker.compose.enabled=false
