--- a/BACKEND/artifact/src/main/resources/application.properties
+++ b/BACKEND/artifact/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=artifact
 
 ## Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/fashion_shop_db
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=Phamthien123@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
