--- a/BACKEND/artifact/src/main/resources/application.properties
+++ b/BACKEND/artifact/src/main/resources/application.properties
@@ -1,17 +1,33 @@
 spring.application.name=artifact
 
-## Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/fashion_shop_db
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=Phamthien123@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+## Database
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-
-## Force Hibernate to create tables
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
 
-## Disable Docker Compose
+## Disable Docker Compose auto
 spring.docker.compose.enabled=false
+
+## Redis
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.username=${REDIS_USERNAME}
+spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.ssl.enabled=${REDIS_SSL:false}
+
+## OAuth2 - Google
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+spring.config.import=optional:file:.env.local.properties
+## JWT
+# jwt.secret=${JWT_SECRET}
+# jwt.access.expiration-ms=${JWT_ACCESS_EXP_MS:3600000}
+# jwt.refresh.expiration-ms=${JWT_REFRESH_EXP_MS:604800000}
